# avm

./: .gitignore  Arduivm.ino  Asm.py  Cell.cpp  Cell.h  Instructions.cpp  Instructions.h  Number.cpp  Number.h  README.md  REPL.cpp  REPL.h  VM.cpp  VM.h  add.avm  asm.py  boot.h  config.h  instruction_set.h  instruction_set.json  instruction_set.py  make_instruction_set.py  platform.txt  pow.avm  pow.h  read-and-blink.avm  read-and-blink.h  runtests.sh  serial_tester.py  spawn.h  test-math-advanced-features.avm  test-math.avm  test-math.h  util.cpp  util.h
cmake/: Arduino.cpp  Arduino.h  CMakeLists.txt  runavm.cpp
mute/: Main.hs  mute.cabal  stack.yaml
mute/src/: Main.hs  Mute.hs  testpins.mute
tests/: README.txt  blink.avm  blink.h  blink.hex  floatmath.avm  floatmath.h  floatmath.hex  loop-intmath.avm  loop-intmath.h  loop-intmath.hex  parallel_loop-intmath_blink.avm  parallel_loop-intmath_blink.h  parallel_loop-intmath_blink.hex  read-and-blink.h  spawn.avm  spawn.h  spawn.hex  string.avm  string.h  string.hex
tests/broken/: test-math-advanced-features.avm
